@@ -498,6 +498,7 @@ StrictClusterPipeline.move = block_pipeline_command(StrictRedis.move)
 StrictClusterPipeline.mset = block_pipeline_command(StrictRedis.mset)
 StrictClusterPipeline.msetnx = block_pipeline_command(StrictRedis.msetnx)
 StrictClusterPipeline.pfmerge = block_pipeline_command(StrictRedis.pfmerge)
+StrictClusterPipeline.pfcount = block_pipeline_command(StrictRedis.pfcount)
 StrictClusterPipeline.ping = block_pipeline_command(StrictRedis.ping)
 StrictClusterPipeline.publish = block_pipeline_command(StrictRedis.publish)
 StrictClusterPipeline.randomkey = block_pipeline_command(StrictRedis.randomkey)
